# OcherBook

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README  README.md  cmake_options.cmake  meson.build  meson_options.txt  ocher.config  uncrustify.cpp.cfg
airbag_fd/: Doxyfile  airbag_fd.c  airbag_fd.h  airbag_fd_test.c
clc/: CMakeLists.txt  config.h
clc/algorithm/: Bitops.h
clc/clc/algorithm/: Random.h
clc/clc/data/: Buffer.cpp  Buffer.h  List.cpp  List.h  Set.cpp  Set.h  StrUtil.h
clc/clc/os/: RWLock.cpp  ThreadLocal.h
clc/clc/storage/: File.cpp  File.h
clc/clc/support/: Debug.h  Exception.h  Flattenable.cpp  LogAppenders.h  Logger.cpp  Logger.h
clc/data/: Buffer.cpp  Buffer.h  Hashtable.cpp  List.cpp  List.h  Set.cpp  Set.h  StrUtil.cpp
clc/os/: Atomic.h  Monitor.cpp  RWLock.cpp  RWLock.h  Thread.h
clc/storage/: DirIter.cpp  DirIter.h  File.cpp  File.h
clc/support/: Debug.cpp  Exception.h  Logger.cpp  Logger.h
clc/test/: BufferTest.h  ListTest.h  clcTestMain.cpp
cmake/: build-flags.cmake  config.cmake
cmake/toolchains/: kobo.cmake  raspberrypi.cmake
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  FEATURES  GOALS  LICENSE  LICENSES  PRIVACY  RELEASES  TODO  kobo-dev.md  meson.build  privacy.md  style.md
doc/building/haiku/: BUILD
doc/building/kobo/: BUILD  INSTALL
doc/design/: debug.txt  layout.txt  pagination.txt  widgets.txt
doc/resources/: fonts.txt
doc/style/: cpp.txt
docs/: CONTRIBUTING.md  Doxyfile.in  meson.build  privacy.md  style.md
docs/design/: widgets.md
ocher/: CMakeLists.txt  Container.cpp  Container.h  cmake_config.h.in  meson.build  meson_config.h.in  ocher.cpp  ocher.h  version.h.in
ocher/device/: Battery.cpp  Battery.h  Device.cpp  Device.h  Event.h  Filesystem.cpp  Filesystem.h  ntx.cpp  ntx.h
ocher/device/kobo/: KoboEvents.cpp  KoboEvents.h
ocher/device/mx50/: Suspend.h
ocher/fmt/: Format.cpp  Format.h  Layout.cpp  Layout.h
ocher/fmt/epub/: Css.cpp  Css.h  Epub.cpp  Epub.h  LayoutEpub.cpp  LayoutEpub.h  ParseHtml.c  TreeMem.h  UnzipCache.cpp  UnzipCache.h
ocher/fmt/text/: LayoutText.cpp  LayoutText.h  Text.cpp  Text.h
ocher/output/mx50/: fb.cpp
ocher/resources/: Bitmaps.cpp  Bitmaps.h  Circle.pgm  LeftArrow.h  LeftArrow.pgm  RightArrow.h  RightArrow.pgm
ocher/settings/: Options.h  Settings.cpp  Settings.h
ocher/shelf/: Meta.cpp  Meta.h  Shelf.cpp  Shelf.h
ocher/test/: BatteryTest.h  BufferTest.cpp  CMakeLists.txt  EpubTest.h  FormatTest.h  JsonTest.cpp  OcherTest.cpp  SettingsTest.cpp  meson.build
ocher/test/resources/: simple.html  simple.txt
ocher/util/: Bitops.h  Buffer.cpp  Buffer.h  Clock.cpp  Clock.h  Debug.cpp  Debug.h  DirIter.cpp  DirIter.h  Exception.h  File.cpp  File.h  Intrinsics.h  Lock.cpp  Lock.h  LogAppenderFile.h  LogAppenders.cpp  LogAppenders.h  Logger.cpp  Logger.h  Monitor.cpp  Monitor.h  MurmurHash2.cpp  MurmurHash2.h  Path.cpp  Path.h  RWLock.cpp  RWLock.h  Random.cpp  Random.h  Stopwatch.h  StrUtil.cpp  StrUtil.h  Thread.cpp  Thread.h  ThreadLocal.h  intrinsics.h  stdex.h  time.cpp  time.h
ocher/ux/: Activity.cpp  Activity.h  Bookmark.h  BootActivity.cpp  BootActivity.h  Browse.h  Controller.cpp  Controller.h  Event.cpp  Event.h  Factory.cpp  Factory.h  HomeActivity.cpp  HomeActivity.h  LibraryActivity.cpp  LibraryActivity.h  OcherBoot.cpp  Pagination.cpp  Pagination.h  PowerSaver.cpp  PowerSaver.h  ReadActivity.cpp  ReadActivity.h  Renderer.cpp  Renderer.h  SettingsActivity.cpp  SettingsActivity.h  SyncActivity.cpp  SyncActivity.h  Types.h
ocher/ux/cdk/: ActivityCdk.h  BrowseActivityCdk.cpp  BrowseActivityCdk.h  HomeActivityCdk.h  LibraryActivityCdk.cpp  LibraryActivityCdk.h  RendererCdk.cpp  RendererCdk.h  UxControllerCdk.cpp  UxControllerCdk.h
ocher/ux/fb/: ActivityFb.h  BatteryIcon.cpp  BatteryIcon.h  BootActivityFb.cpp  BootActivityFb.h  BrowseFb.cpp  BrowseFb.h  ClockIcon.cpp  ClockIcon.h  FactoryFb.cpp  FactoryFb.h  FbLinux.cpp  FbLinux.h  FbTypes.h  FontEngine.cpp  FontEngine.h  FrameBuffer.cpp  FrameBuffer.h  FreeType.cpp  FreeType.h  GlyphCache.h  HomeActivityFb.cpp  HomeActivityFb.h  JPEG.cpp  LibraryActivityFb.cpp  LibraryActivityFb.h  NavBar.cpp  NavBar.h  ReadActivityFb.cpp  ReadActivityFb.h  RenderFb.cpp  RenderFb.h  RendererFb.cpp  RendererFb.h  RleBitmap.cpp  RleBitmap.h  SettingsActivityFb.cpp  SettingsActivityFb.h  SleepActivityFb.cpp  SleepActivityFb.h  (+12 more)
ocher/ux/fb/mx50/: FactoryFbMx50.cpp  FactoryFbMx50.h  FrameBufferMx50.cpp  FrameBufferMx50.h  fb.cpp  fb.h
ocher/ux/fb/sdl/: FactoryFbSdl.cpp  FactoryFbSdl.h  FbSdl.cpp  FbSdl.h  FrameBufferSdl.cpp  FrameBufferSdl.h  SdlLoop.cpp  SdlLoop.h  SdlThread.cpp  SdlThread.h
ocher/ux/fd/: ActivityFd.h  BrowseFd.cpp  BrowseFd.h  FactoryFd.cpp  FactoryFd.h  LibraryActivityFd.cpp  LibraryActivityFd.h  RenderFd.cpp  RenderFd.h  RendererFd.cpp  RendererFd.h  UxControllerFd.cpp  UxControllerFd.h
ocher/ux/ncurses/: Browse.cpp  Browse.h  FactoryNC.cpp  FactoryNC.h  RenderCurses.cpp  RenderCurses.h
subprojects/: README.md  freetype.cmake  freetype.wrap  json.wrap  libev.cmake  libev.wrap  libjpeg.wrap  mxml.cmake  mxml.wrap  sdl2.wrap  zlib.cmake  zlib.wrap
subprojects/Signals/: CMakeLists.txt  Delegate.h  meson.build
subprojects/airbag_fd/: CMakeLists.txt  airbag_fd.h.3
subprojects/catch/: meson.build
subprojects/doctest/: CMakeLists.txt  meson.build
subprojects/freetype/: CMakeLists.txt
subprojects/json/: CMakeLists.txt  meson.build
subprojects/libhubbub/: CMakeLists.txt
subprojects/wraps/freetype-2.4.12/: meson.build
subprojects/wraps/libev-4.24/: meson.build
subprojects/wraps/mxml-2.10/: meson.build  meson.config.h.in
test/: CMakeLists.txt  purgatory.sh
test/unittest-cpp/UnitTest++/: CMakeLists.txt
toolchains/: buildroot-2019.02.5-kobo.config  kobo-linaro.meson  kobo-ubuntu.meson  kobo.cmake  kobo.meson  raspberrypi.cmake
tools/: fbctl.cpp  ioctltrace.c  meson.build  pgm2h.cpp  put-kobo.sh  run-kobo.sh
tools/rooting/kobo/: KoboRoot.tgz  README
tools/rooting/kobo/etc/: .inetd.conf.swp  inetd.conf  inittab
tools/trace/: ioctl-dumper.c
(+15 files in other folders)
