cmake_minimum_required(VERSION 3.1)

if ("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
	message(FATAL_ERROR "In-source builds are strongly discouraged.")
endif()
if(NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE Debug)
endif()
if(NOT OCHER_TOOLCHAIN_ROOT)
	set(OCHER_TOOLCHAIN_ROOT /toolchains)
endif()

project(ocher VERSION 0.1.0 LANGUAGES CXX C)

include(cmake/config.cmake)
include(cmake/build-flags.cmake)

if(NOT CMAKE_CROSSCOMPILING)
	enable_testing()
endif()

add_subdirectory(third-party/Signals)
add_subdirectory(third-party/catch)
add_subdirectory(third-party/freetype)
add_subdirectory(third-party/json)
add_subdirectory(third-party/libev)
add_subdirectory(third-party/mxml)
add_subdirectory(third-party/zlib)
add_subdirectory(ocher)
add_subdirectory(doc)
